# Corrosion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RustCompiler.pro  compiler.hpp  config.hpp  corrosion.hpp  main.cpp  rustc.hpp
docs/: CMakeLists.txt  doxy.in  report.docx
docs/dox/: extra.dox
docs/md/: main.md
lexer/: comments.hpp  fwd.hpp  lexer.hpp  numberliterals.hpp  rustlexerspec.hpp  rxmap.hpp  tokenid.hpp  tokenmap.hpp  whitespaces.hpp
parser/: parser.hpp
src/: compiler.hpp  config.hpp  corrosion.hpp  main.cpp
src/ast/: assoc_prec.hpp  ast.hpp  fwd.hpp  token.cpp  token.hpp  token_tree.cpp  token_tree.hpp
src/ast/node/: expr.cpp  expr.hpp  item.cpp  item.hpp  literal.hpp  op.hpp  pattern.hpp  stmt.hpp  type.hpp
src/driver/: compiler.hpp  driver.hpp
src/error/: error.hpp  log.hpp
src/lexer/: cursor.hpp  fwd.hpp  lexer.hpp  rustlexerspec.hpp  rxmap.hpp  tokenid.hpp  tokens.hpp.autosave  unescape.hpp
src/parser/: interface.hpp  parse_session.hpp  parser.hpp  string_reader.hpp  symbol_gallery.hpp  token_stream.hpp
src/parser/ast/: core_types.hpp  keywords.hpp  token.cpp  token.hpp  token_tree.hpp
src/parser/lexer/: string_reader.hpp  tokentrees.hpp
src/parser/parse/: diagnostics.cpp  expr.cpp  item.cpp  path.cpp  pattern.cpp  stmt.cpp  ty.cpp
src/span/: keywords_and_syms.hpp  source_file.hpp  span.hpp  symbol.cpp  symbol.hpp
src/utility/: bitwise.hpp  cexception.hpp  file_loader.hpp  filesystem.hpp  fwd.hpp  std_incl.hpp  uchar.hpp  variant_wrapper.hpp
test/: CMakeLists.txt  CMakeLists.txt.autosave
test/lexer/: benchmark.cpp  compiler_fixture.hpp  lexer.cpp  lexer.cpp.autosave  number_literals.cpp  string_literals.cpp  string_reader.cpp  uchar.cpp
test/lexer/rs/: number_literals.rs
test/rs/: test.rs
test/rs/lexer/: float_literals.rs  integer_literals.rs  lex1.rs  lex2.rs  string_literals.rs
